# table-sweepers

./: CMakeLists.txt  README.md  main.cpp
controller/: board.cpp  board.h
entities/: player.h
ui/: window.cpp  window.h
ui/model/: model.h
utils/: observer.h  repository.h  utils.h
